--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "update-schema": "babel-node --presets es2015 ./data/updateSchema.js",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "babel-node --presets es2015 devServer.js",
+	"start":"node server.js",
+    "start-dev": "babel-node --presets es2015 devServer.js",
     "lint": "eslint src"
   },
   "repository": {
