--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@risingstack/graffiti": "^2.0.0",
     "express-graphql": "^0.4.4",
     "graphql": "^0.4.13",
+    "koa": "^1.1.2",
     "path": "^0.12.7",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
