--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@risingstack/graffiti": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "express-graphql": "^0.4.4",
     "graphql": "^0.4.13",
