--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A new Webpack boilerplate with hot reloading React components, and error handling on module and component level.",
   "scripts": {
     "clean": "rimraf dist",
-    "update-schema": "babel-node --presets es2015 ./data/updateSchema.js",
+    "update-schema": "babel-node --presets es2015 ./database/updateSchema.js",
     "build:webpack": "SET NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "node server.js",
