--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "path": "^0.12.7",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-motion": "^0.3.1",
     "react-select": "^0.9.1"
   }
 }
