--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
-    "react-select": "^0.9.1"
+    "react-select": "^0.9.1",
+    "rethinkdb": "^2.2.1"
   }
 }
