--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf dist",
     "update-schema": "babel-node --presets es2015 ./database/updateSchema.js",
     "build:webpack": "SET NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:webpack",
+    "build": "webpack --config webpack.config.prod.js",
     "start": "node server.js",
     "start-dev": "node devServer.js",
     "lint": "eslint src"
