--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-register": "^6.5.2",
+    "babel-relay-plugin": "^0.7.1",
     "css-loader": "^0.22.0",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^2.3.0",
     "file-loader": "^0.8.4",
     "koa-webpack-dev-middleware": "^1.1.0",
     "koa-webpack-hot-middleware": "^1.0.3",
+    "react-router-relay": "^0.9.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
@@ -69,9 +72,13 @@
     "koa-static": "^1.5.2",
     "path": "^0.12.7",
     "react": "^0.14.0",
+    "react-addons-update": "^0.14.7",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
+    "react-relay": "^0.7.1",
+    "react-router": "^2.0.0",
     "react-select": "^0.9.1",
-    "rethinkdb": "^2.2.1"
+    "rethinkdb": "^2.2.1",
+    "rxjs": "^5.0.0-beta.2"
   }
 }
