--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^0.8.4",
     "koa-webpack-dev-middleware": "^1.1.0",
     "koa-webpack-hot-middleware": "^1.0.3",
+    "raw-loader": "^0.5.1",
     "react-router-relay": "^0.9.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
@@ -61,9 +62,20 @@
   },
   "dependencies": {
     "@risingstack/graffiti": "^2.0.0",
+    "aframe": "^0.2.0",
+    "aframe-react": "^1.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "express-graphql": "^0.4.4",
+    "gl-react": "^2.2.0",
+    "gl-react-dom": "^2.2.0",
+    "glsl-aastep": "^1.0.1",
+    "glsl-diffuse-oren-nayar": "^1.0.2",
+    "glsl-face-normal": "^1.0.2",
+    "glsl-perturb-normal": "^1.0.2",
+    "glsl-specular-blinn-phong": "^1.0.1",
+    "glslify": "^5.0.2",
+    "glslify-loader": "^1.0.2",
     "graphql": "^0.4.13",
     "graphql-relay": "^0.3.6",
     "koa": "^1.1.2",
@@ -71,15 +83,19 @@
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^1.5.2",
+    "load-bmfont": "^1.2.3",
     "path": "^0.12.7",
+    "raw-loader": "^0.5.1",
     "react": "^0.14.0",
     "react-addons-update": "^0.14.7",
+    "react-cassette-player": "^1.1.0",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
     "react-relay": "^0.7.1",
     "react-router": "^2.0.0",
     "react-select": "^0.9.1",
     "rethinkdb": "^2.2.1",
-    "rxjs": "^5.0.0-beta.2"
+    "rxjs": "^5.0.0-beta.2",
+    "three-bmfont-text": "^2.1.0"
   }
 }
