--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "react-relay": "^0.7.1",
     "react-router": "^2.0.0",
     "react-select": "^0.9.1",
-    "rethinkdb": "^2.1.1",
+    "rethinkdb": "2.1.1",
     "rxjs": "^5.0.0-beta.2",
     "three-bmfont-text": "^2.1.0"
   }
